<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/value_64dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineFirstHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/value_64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.02"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSecondHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/value_64dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="@dimen/value_0dp"
        android:contentDescription="@string/action_login"
        android:layout_marginHorizontal="@dimen/value_16dp"
        app:srcCompat="@drawable/image_login"
        app:layout_constraintTop_toTopOf="@id/guidelineFirstHorizontal"
        app:layout_constraintBottom_toTopOf="@id/guidelineSecondHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_8dp"
        android:alpha="0"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:text="@string/text_login"
        app:layout_constraintTop_toTopOf="@id/guidelineSecondHorizontal"
        app:layout_constraintStart_toStartOf="@id/imgLogin"
        app:layout_constraintEnd_toEndOf="@id/imgLogin"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/text_message_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/tvLogin"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLogin"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_12dp"
        android:alpha="0"
        android:text="@string/text_email"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage"
        app:layout_constraintStart_toStartOf="@id/tvLogin"/>

    <com.taufik.ceritaku.utils.CustomEditText
        android:id="@+id/etEmail"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_8dp"
        android:alpha="0"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="@dimen/value_8dp"
        android:padding="@dimen/value_8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/text_email_eg"
        android:textSize="@dimen/value_14sp"
        android:inputType="textEmailAddress"
        android:imeOptions="actionNext"
        android:nextFocusDown="@id/etPassword"
        android:autofillHints="emailAddress"
        app:layout_constraintTop_toBottomOf="@id/tvEmail"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLogin"/>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16dp"
        android:alpha="0"
        android:text="@string/text_password"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="@id/tvLogin"/>

    <com.taufik.ceritaku.utils.CustomEditText
        android:id="@+id/etPassword"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_8dp"
        android:alpha="0"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="@dimen/value_8dp"
        android:padding="@dimen/value_8dp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/text_password"
        android:textSize="@dimen/value_14sp"
        android:inputType="textPassword"
        android:imeOptions="actionDone"
        android:autofillHints="password"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLogin"/>

    <CheckBox
        android:id="@+id/cbShowPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:buttonTint="@color/purple_700"
        android:text="@string/action_show_password"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLogin"/>

    <com.taufik.ceritaku.utils.MaterialCustomButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginTop="@dimen/value_20dp"
        android:enabled="false"
        android:textAllCaps="false"
        android:text="@string/action_login"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/value_10dp"
        app:layout_constraintTop_toBottomOf="@id/cbShowPassword"
        app:layout_constraintStart_toStartOf="@id/tvLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLogin"/>

    <TextView
        android:id="@+id/tvDoNotHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:layout_marginTop="@dimen/value_12dp"
        android:text="@string/text_do_not_have_account"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/tvLogin"
        app:layout_constraintStart_toStartOf="@id/tvLogin"/>

</androidx.constraintlayout.widget.ConstraintLayout>