<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.welcome.WelcomeActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/value_64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/value_64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imgWelcome"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="@dimen/value_0dp"
        android:contentDescription="@string/text_welcome"
        app:srcCompat="@drawable/image_welcome"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_8dp"
        android:layout_marginHorizontal="@dimen/value_32dp"
        android:alpha="0"
        android:fontFamily="sans-serif-black"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:text="@string/text_hi_welcome"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_8dp"
        android:alpha="0"
        android:fontFamily="sans-serif"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:text="@string/text_description"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintEnd_toEndOf="@id/tvWelcome"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignup"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_36dp"
        android:layout_marginEnd="@dimen/value_16dp"

        android:text="@string/action_signup"
        android:textAllCaps="false"
        android:elevation="@dimen/value_2dp"
        app:cornerRadius="@dimen/value_100dp"
        app:backgroundTint="@color/white"
        app:strokeColor="@color/purple_700"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintEnd_toEndOf="@id/guidelineVertical"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/value_16dp"

        android:text="@string/action_login"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:elevation="@dimen/value_2dp"
        app:cornerRadius="@dimen/value_100dp"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintTop_toTopOf="@id/btnSignup"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
        app:layout_constraintEnd_toEndOf="@id/tvWelcome"/>

</androidx.constraintlayout.widget.ConstraintLayout>