<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_0dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/value_64dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineFirstHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/value_64dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.02"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineSecondHorizontal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/value_64dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/imgSignup"
            android:layout_width="@dimen/value_0dp"
            android:layout_height="@dimen/value_0dp"
            android:contentDescription="@string/action_signup"
            android:layout_marginHorizontal="@dimen/value_16dp"
            app:srcCompat="@drawable/image_signup"
            app:layout_constraintTop_toTopOf="@id/guidelineFirstHorizontal"
            app:layout_constraintBottom_toTopOf="@id/guidelineSecondHorizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="@dimen/value_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_16dp"
            android:alpha="0"
            android:text="@string/text_message_signup"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="@id/guidelineSecondHorizontal"
            app:layout_constraintStart_toStartOf="@id/imgSignup"
            app:layout_constraintEnd_toEndOf="@id/imgSignup"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_12dp"
            android:alpha="0"
            android:text="@string/text_name"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/tvMessage"
            app:layout_constraintStart_toStartOf="@id/tvMessage"/>

        <com.taufik.ceritaku.utils.MaterialCustomEditText
            android:id="@+id/etName"
            android:layout_width="@dimen/value_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_8dp"
            android:alpha="0"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="@dimen/value_8dp"
            android:padding="@dimen/value_8dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/text_name_eg"
            android:textSize="@dimen/value_14sp"
            android:inputType="textCapWords"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/etPassword"
            android:autofillHints="emailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            app:layout_constraintStart_toStartOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_16dp"
            android:alpha="0"
            android:text="@string/text_email"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etName"
            app:layout_constraintStart_toStartOf="@id/tvMessage"/>

        <com.taufik.ceritaku.utils.MaterialCustomEditText
            android:id="@+id/etEmail"
            android:layout_width="@dimen/value_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_8dp"
            android:alpha="0"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/value_8dp"
            android:padding="@dimen/value_8dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/text_email_eg"
            android:textSize="@dimen/value_14sp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:nextFocusDown="@id/etPassword"
            android:autofillHints="emailAddress"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:layout_constraintStart_toStartOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"/>

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_16dp"
            android:alpha="0"
            android:text="@string/text_password"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            app:layout_constraintStart_toStartOf="@id/tvMessage"/>

        <com.taufik.ceritaku.utils.MaterialCustomEditText
            android:id="@+id/etPassword"
            android:layout_width="@dimen/value_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/value_8dp"
            android:alpha="0"
            android:drawableStart="@drawable/ic_password"
            android:drawablePadding="@dimen/value_8dp"
            android:padding="@dimen/value_8dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/text_password"
            android:textSize="@dimen/value_14sp"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:autofillHints="password"
            app:layout_constraintTop_toBottomOf="@id/tvPassword"
            app:layout_constraintStart_toStartOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"/>

        <CheckBox
            android:id="@+id/cbShowPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:buttonTint="@color/purple_700"
            android:text="@string/action_show_password"
            app:layout_constraintTop_toBottomOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"/>

        <com.taufik.ceritaku.utils.MaterialCustomButton
            android:id="@+id/btnSignup"
            android:layout_width="@dimen/value_0dp"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginTop="@dimen/value_8dp"
            android:enabled="false"
            android:textAllCaps="false"
            android:text="@string/action_signup"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/value_100dp"
            app:layout_constraintTop_toBottomOf="@id/cbShowPassword"
            app:layout_constraintStart_toStartOf="@id/tvMessage"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"/>

        <TextView
            android:id="@+id/tvHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0"
            android:layout_marginTop="@dimen/value_16dp"
            android:text="@string/text_have_account"
            app:layout_constraintTop_toBottomOf="@id/btnSignup"
            app:layout_constraintEnd_toEndOf="@id/tvMessage"
            app:layout_constraintStart_toStartOf="@id/tvMessage"/>

        <ProgressBar
            android:id="@+id/progressRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/purple_700"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>