<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16dp"
        android:layout_marginStart="@dimen/value_16dp"
        android:text="@string/text_welcome_alt"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/value_16dp"
        tools:text="@tools:sample/cities"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/imgFavorite"
        android:layout_width="@dimen/value_24dp"
        android:layout_height="@dimen/value_24dp"
        android:layout_marginEnd="@dimen/value_16dp"
        android:focusable="true"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/action_exit"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_favorite_outline"
        app:layout_constraintEnd_toStartOf="@id/imgExitApp"
        app:layout_constraintTop_toTopOf="@id/tvWelcome" />

    <ImageView
        android:id="@+id/imgExitApp"
        android:layout_width="@dimen/value_24dp"
        android:layout_height="@dimen/value_24dp"
        android:focusable="true"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="@string/action_exit"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_logout"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintTop_toTopOf="@id/tvWelcome" />

    <TextView
        android:id="@+id/tvYourStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_16dp"
        android:text="@string/text_your_story"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        app:layout_constraintStart_toStartOf="@id/tvWelcome" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvStories"
        android:layout_width="@dimen/value_0dp"
        android:layout_height="@dimen/value_0dp"
        android:layout_marginTop="@dimen/value_8dp"
        android:layout_marginBottom="@dimen/value_20dp"
        android:visibility="gone"
        tools:listitem="@layout/item_list_stories"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/tvYourStory"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/tvWelcome"
        app:layout_constraintEnd_toEndOf="@id/tvName"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:id="@+id/fabAddStory"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/value_16dp"
        android:contentDescription="@string/action_add_story"
        android:text="@string/action_add_story"
        android:textColor="@color/white"
        app:srcCompat="@drawable/ic_add_story"
        app:tint="@color/white"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabMaps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/value_16dp"
        android:contentDescription="@string/action_add_story"
        android:text="@string/action_add_story"
        android:textColor="@color/white"
        app:srcCompat="@drawable/ic_outline_map"
        app:tint="@color/white"
        app:backgroundTint="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@id/tvName"
        app:layout_constraintBottom_toTopOf="@id/fabAddStory"/>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmerMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_0dp"
        android:layout_marginBottom="@dimen/value_20dp"
        app:layout_constraintTop_toBottomOf="@id/tvYourStory"
        app:layout_constraintBottom_toBottomOf="parent">

        <include layout="@layout/shimmer_item_list_stories"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>